--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
       <div class="pure-u-1-3">
         <div class="description description-right">
-          <h2>Number of Suicide and Suicide Rate</h2>
+          <h2>aaaa</h2>
           <p>
             ...
           </p>
