--- a/index.html
+++ b/index.html
@@ -69,10 +69,7 @@
         <div class="description description-left">
           <h2>Price of Petrol in Different Regions</h2>
           <p>
-            This chart shows the price of petrol from different regions. From the visualistion,
-            male has more suicide cases compare to female. This can be related as male could be more stressful
-            than female in different field. <b>Both male and female in Europe having the highest suicide rate</b> 
-            from this visualisation.</p>
+            This chart shows the price of petrol from different regions. .</p>
         </div>
       </div>
       <div class="pure-u-2-3">
